k8s/overlays/local/harbor/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-core
spec:
  template:
    spec:
      containers:
      - name: core
        command: ["/bin/sh"]
        args:
        - -c
        - |
          export _REDIS_URL_CORE="redis://:${REDIS_PASSWORD}@redis.redis-local.svc.cluster.local:6379/0"
          export _REDIS_URL_REG="redis://:${REDIS_PASSWORD}@redis.redis-local.svc.cluster.local:6379/1"
          exec /harbor/harbor_core
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
